Corregidas imágenes que no aparecen en capítulo 3

--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -249,7 +249,7 @@ Al igual que en el caso de los conjuntos de Julia, \textit{Mathematica} tiene un
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.54]{./img/C3/Mandelbrot-Mathematica.png} &   \includegraphics[scale=0.46]{./img/C3/MandelbrotSetPlot.png} \\
+    \includegraphics[scale=0.432]{./img/C3/Mandelbrot-Mathematica.png} &   \includegraphics[scale=0.368]{./img/C3/MandelbrotSetPlot.png} \\
   (a) Salida del código \textit{Mathematica}  & (b) Salida de la orden `MandelbrotSetPlot' \\[6pt]
   \end{tabular}
   \caption{Representación de $\mathcal{M}$ y detalle en $[-0.65, -0.4]\times[0.47, 0.72]$}
@@ -267,6 +267,10 @@ Ya en el comienzo de este capítulo mencionamos, y en las propias imágenes pres
 
 Recordemos el conjunto de Julia $\mathcal{J}_{-0.23+0.65}$, que podemos ver en la imagen \ref{fig:julia-explicados} (b). En las imágenes \ref{fig:detalles-julia} podemos ver distintos detalles, de forma que la primera es una ampliación de la original y las siguientes son cada una un `zoom' de la anterior.
 
+Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente iguales, pudiendo ver así una de las regiones autosimilares de $\mathcal{J}_{-0.23+0.65}$. En las imágenes \ref{fig:mas-detalles-julia} podemos ver algunas regiones ampliadas de ciertos conjuntos de Julia, pudiendo observar regiones autosimilares.
+
+\newpage
+
 \begin{figure}[ht]
   \begin{tabular}{ccc}
     \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-1.png} &   \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-2.png} &   \includegraphics[scale=0.33]{./img/C3/julia-autosimilar-3.png} \\
@@ -276,19 +280,19 @@ Recordemos el conjunto de Julia $\mathcal{J}_{-0.23+0.65}$, que podemos ver en l
   \label{fig:detalles-julia}
 \end{figure}
 
-Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente iguales, pudiendo ver así una de las regiones autosimilares de $\mathcal{J}_{-0.23+0.65}$. En las imágenes \ref{fig:mas-detalles-julia} podemos ver algunas regiones ampliadas de ciertos conjuntos de Julia, pudiendo observar regiones autosimilares.
-
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-4.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-5.png} \\
+    \includegraphics[scale=0.35]{./img/C3/julia-autosimilar-4.png} &   \includegraphics[scale=0.35]{./img/C3/julia-autosimilar-5.png} \\
   (a) $\mathcal{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathcal{J}_{0.45-0.62 i}$ en $[-0.8,0.2]\times[-0.8,0.2]$ \\[6pt]
-  \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-6.png} &   \includegraphics[scale=0.39]{./img/C3/julia-autosimilar-7.png} \\
+  \includegraphics[scale=0.35]{./img/C3/julia-autosimilar-6.png} &   \includegraphics[scale=0.35]{./img/C3/julia-autosimilar-7.png} \\
   (c) $\mathcal{J}_{0.23+0.51i}$ en $[-1.1,-0.4]\times[0.4,1.1]$ & (d) $\mathcal{J}_{-0.52+0.51 i}$ en $[0,1.5]\times[-1,0.5]$ \\[6pt]
   \end{tabular}
   \caption{Detalles autosimilares de algunos conjuntos de Julia}
   \label{fig:mas-detalles-julia}
 \end{figure}
+
+\newpage
 
 \subsection{Autosimilaridad en el conjunto de Mandelbrot}
 
@@ -297,9 +301,9 @@ El conjunto de Mandelbrot, el cual ya conocemos, está compuesto fundamentalment
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-1.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-2.png} \\
+    \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-1.png} &   \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-2.png} \\
   (a) $[-1,-0.5]\times[0,0.5]$ & (b) $[-1.5,-1.2]\times[-0.15,0.15]$ \\[6pt]
-  \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-3.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-4.png} \\
+  \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-3.png} &   \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-4.png} \\
   (c) $[-0.2,0]\times[-1.1,-0.9]$ & (d) $[-0.9,0.3]\times[-1,0.2]$ \\[6pt]
   \end{tabular}
   \caption{Detalles autosimilares de $\mathcal{M}$}
@@ -311,7 +315,7 @@ En la imagen \ref{fig:detalles-mandelbrot} (b) podemos ver una representación d
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-5.png} &   \includegraphics[scale=0.4]{./img/C3/mandelbrot-autosimilar-6.png} \\
+    \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-5.png} &   \includegraphics[scale=0.35]{./img/C3/mandelbrot-autosimilar-6.png} \\
   (a) $[-1.42,-1.36]\times[-0.03,0.03]$  & (b) $[-1.405,-1.39]\times[-0.0075,0.0075]$ \\[6pt]
   \end{tabular}
   \caption{Ampliaciones del bulbo principal de $\mathcal{M}$}
@@ -341,6 +345,8 @@ La extensión más natural y la que nos proporcionará resultados más llamativo
 
 
 Fijémonos en que hemos fijado $c=-0.55+0.48i$ y hemos variado el exponente de la función polinómica. Llama la atención lo distintos que son los conjuntos entre sí cuando realmente el $c$ fijado es el mismo en todos los casos. 
+
+\newpage
 
 Como ya comentamos en la sección \ref{section:conexos-polvaredas}, el teorema \ref{th:fatou-julia} (teorema de la dicotomía de Fatou-Julia) es válido para cualquier polinomio de grado mayor o igual que 2, en particular es válido para la familia de funciones $\{P_{c,N}(z)\}_{c\in\C}$. Tenemos por tanto que de la misma forma es válido el corolario, por lo que la distinción entre conjuntos de Julia conexos y polvaredas se vuelve a basar en buscar la convergencia o divergencia de la sucesión $\{P_{c,N}^n(0)\}$.
 
